hphp/hack/doc/hack-langspec/tests/Enums/string_int_equality_problem.php.expectf

Fatal error: Call to undefined function NS_string_int_equality_problem\main() in %s/tests/Enums/string_int_equality_problem.php on line 39